[3.4.0]
- revamped Non launcher, now it automatically updates your Non version

[3.3.0]
- updated Gradle Android to 0.14.4
- updated RoboVM to 1.0.0-beta-03
- updated LibGDX to 1.5.3
- updated Gradle to 2.2
- revamped physics plugin again (read Physics and Box2D section on Wiki)
- added support for fixtures to physics plugin
- renamed non.getWidth to non.width
- renamed non.getHeight to non.height
- renamed non.getConfig to non.config
- renamed non.getDelta to non.delta
- renamed non.getFPS to non.fps
- renamed non.checkPlatform to non.platform
- removed non.getPlatform
- fixed android:run task (read Running and packaging a project section on Wiki)
- fixed loading of physics plugin
- fixed bug where gradlew was not recognized as executable on Unix systems
- fixed major bug with handling mouse and touch input
- optimized console launcher a bit
- fixed bug when task fails, it was not recognizing it until all tasks ended
- console now properly ignores fake errors from LuaJ and Rhino libraries (Lua and JavaScript)

[3.2.2]
- added proper loading animation for Non command line
- added getPosition method to input.touch
- added option for hiding mouse (desktop only) with show() and hide() methods
- added automatic dependency loading to plugins

[3.2.1]
- simplified logging of non.jar CLI
- added support for multi-threading for JavaScript, not yet working on Lua
- fixed translate method in graphics plugin
- added project and unproject method to graphics plugin
- now logging functions do not return values (was returning always NULL)
- removed warning logging level
- error logging level do not force quit application
- tweaked default log messages a bit
- added setting for log level to non.cfg
- fixed networking
- semi-fixed desktop:run task from CLI (still failing to load resources)
- now update task from CLI properly clears unused plugins and languages
- plugin loader now uses reflection and not initializer class what was generated by gradle