@@ -1,4 +1,0 @@
-Manifest-Version: 1.0
-Created-By: 1.6.0_45 (Sun Microsystems Inc.)
-Main-Class: launcher.Main
-
